<resources>
    <string name="app_name">Call Switch</string>
    <string name="replies_label">Replies</string>
    <string name="empty_reply">Empty reply</string>
    <string name="edit_reply">Edit Reply</string>
    <string name="send_to">Send to</string>
    <string name="add_contacts_hint">Add contacts to send reply to</string>
    <string name="priority">Priority</string>
    <string name="reply_unknown">Reply Unknown Callers</string>
    <string name="type_message">Type message...</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="finish">Finish</string>
    <string name="select_all">Select All</string>
    <string name="normal">Normal</string>
    <string name="priority_high">High</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_low">Low</string>
    <string name="options">Options</string>
    <string name="replies">Replies</string>
    <string name="active_reply">Active Reply</string>
    <string name="enable">Enable</string>
    <string name="replace_same_priority">Replace Same Priority</string>
    <string name="if_reply_is_set_to_enabled_all_recipients_active_reply_will_be_replaced_with_they_have_equal_or_less_priority">If Reply is set to Enabled, all Recipients\' active reply will be replaced with they have equal or less priority</string>
    <string name="enable_all">Enable All</string>
    <string name="search">Search</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="delete">delete</string>
    <string name="edit">Edit</string>
    <string name="set_active">Make Active</string>
    <string name="add_reply">Add reply</string>
    <string name="settings">Settings</string>
    <string name="turn_system_on_off">Turn System On/Off</string>
    <string name="deleted_contacts">Deleted contacts</string>
    <string name="reply_notification">Reply Notification</string>
    <string name="allow_call_to_ring">Allow call to ring</string>
    <string name="on">On</string>
    <string name="system">System</string>
    <string name="preferred_sim">Preferred sim</string>
    <string name="sim_1">SIM 1</string>
    <string name="notification">Notification</string>
    <string name="allow_calls_ring">Allow calls ring</string>
    <string name="notifications">Notifications</string>
    <string name="do_nothing">Do Nothing</string>
    <string name="highlight">Highlight</string>
    <string name="delete_in_app">Delete in App</string>
    <string name="sim">SIM</string>
    <string name="use_phone_settings">Use phone settings</string>
    <string name="sim_receiving_call">SIM receiving call</string>
    <string name="off">Off</string>
    <string name="bottom_nav_view_transition">bottom_nav_view_transition</string>
    <string name="unknown_contacts_label">Unknown Contacts</string>
    <string name="unknown_contacts_phone_label">## #### ###</string>
    <string name="unknown_contacts_icon_label">U</string>
    <string name="contacts">Contacts</string>
    <string-array name="priority_array">
        <item>High</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>
</resources>