<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <include layout="@layout/component_settings_app_bar"/>

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@drawable/rounded_rectangle_background_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="8dp">
                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/system"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/on"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/settings_system_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <View
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_2"/>
                <LinearLayout
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/preferred_sim"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                    <TextView
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sim_1"
                        android:textSize="16sp"
                        android:textColor="@color/grey_10"/>

                </LinearLayout>
                <View
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_2"/>
                <LinearLayout
                    android:id="@+id/settings_deleted_contacts"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deleted_contacts"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/grey_10"
                        android:text="@string/default_do_nothing"/>
                </LinearLayout>
                <View
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_2"/>
                <LinearLayout
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/notifications"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/settings_reply_notification_switch"/>
                </LinearLayout>
                <View
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_2"/>
                <LinearLayout
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="8dp"
                        android:text="@string/allow_calls_ring"
                        android:textStyle="bold"
                        android:textSize="18sp"/>
                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/settings_let_call_ring_switch"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>