<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RepliesActivity">

    <include layout="@layout/component_edit_reply_app_bar"/>

    <RelativeLayout

        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_above="@id/bottom_nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/type_message"
                    app:errorEnabled="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reply_text_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/options"
                    app:textAllCaps="true"
                    android:layout_marginHorizontal="16dp"
                    android:textStyle="bold"
                    android:textColor="@color/grey_10"/>
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginHorizontal="8dp"
                    android:background="@drawable/rounded_rectangle_background_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            app:tint="@color/grey_10"
                            android:src="@drawable/ic_action_check"/>
                        <TextView
                            android:layout_marginHorizontal="16dp"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/enable"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/enable_reply_switch"
                            android:layout_marginEnd="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/priority_button"
                        android:gravity="center_vertical"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_marginStart="12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:tint="@color/grey_10"
                            android:src="@drawable/ic_action_priority"/>
                        <TextView
                            android:layout_marginHorizontal="16dp"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/priority"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                        <LinearLayout
                            android:gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/priority"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/normal"
                                android:textColor="@color/grey_10"
                                android:layout_marginEnd="4dp"/>
                            <ImageView
                                app:tint="@color/grey_10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_action_down"/>
                        </LinearLayout>

                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            app:tint="@color/grey_10"
                            android:src="@drawable/ic_action_unknown"/>
                        <TextView
                            android:layout_marginHorizontal="16dp"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/reply_unknown"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/reply_unknown_switch"
                            android:layout_marginEnd="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center_vertical"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            app:tint="@color/grey_10"
                            android:src="@drawable/ic_action_swap"/>
                        <TextView
                            android:layout_marginHorizontal="16dp"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/replace_same_priority"
                            android:textStyle="bold"
                            android:textSize="16sp"/>
                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/replace_same_priority_switch"
                            android:layout_marginEnd="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_marginHorizontal="12dp"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/send_to"
                        app:textAllCaps="true"
                        android:textStyle="bold"
                        android:textColor="@color/grey_10"/>
                    <ImageButton
                        android:layout_marginEnd="8dp"
                        android:id="@+id/add_contacts_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/add_contacts_hint"
                        android:background="@null"
                        app:tint="@color/black"
                        android:src="@drawable/ic_action_add"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginHorizontal="8dp"
                    android:id="@+id/selected_contacts_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>




        <include layout="@layout/component_bottom_nav_bar"
            android:id="@+id/bottom_nav_view"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>